fix bug sau khi merge code ở HĐ nhận và HĐ tạo & thay đổi giao diện mẫu HĐ

--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -66,6 +66,15 @@
   text-align: center;
   color: #015393;
 }
+
+.three_dot{
+  cursor: pointer;
+}
+
+.three_dot_text{
+  margin: 10px;
+}
+
 .btn_close {
   width: 90px;
   font-size: inherit;
