--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -239,6 +239,8 @@
 
       .sidebar-dropdown {
         >a:after {
+          height: 20px;
+          width: 20px;
           font-family: 'FontAwesome';
           font-weight: 900;
           // content: "\f105";
@@ -255,7 +257,6 @@
           right: 10px;
           top: 10px;
           transition: transform .3s ease;
-
         }
 
         .sidebar-submenu {
