--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -141,7 +141,7 @@
           </ng-container>
           <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-1"></div>
         </div>
-        <div style="min-height: 66vh" *ngIf="filter_status == 1 || filter_status == 4">
+        <div style="min-height: 66vh" *ngIf="pageTotal > 0 && (filter_status == 1 || filter_status == 4)">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
             <div *ngIf="filter_status == 1 || filter_status == 4">
                 <div class="row">
@@ -332,7 +332,7 @@
         </div>
         </div>
         
-        <div style="min-height: 71vh" *ngIf="filter_status == -1">
+        <div style="min-height: 71vh" *ngIf="pageTotal > 0 && filter_status == -1">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
             <div *ngIf="filter_status == -1">
               <div class="row">
@@ -440,7 +440,7 @@
           </div>
         </div>
         
-        <div style="min-height: 66vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 66vh">
           <div class="item_contract" *ngFor="let item of contractDownloadList | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}; let index1 = index">
             <div *ngIf="filter_status == 4">
                 <div class="row">
@@ -604,7 +604,7 @@
           </div>
         </div>
         
-        <div style="min-height: 66vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 66vh">
           <div class="item_contract" *ngFor="let item of contractsSignMany; let index1 = index">
             <div *ngIf="filter_status == 1 || filter_status == 4">
                 <div class="row">
@@ -836,7 +836,7 @@
           </div>
         </div>
         
-        <div style="min-height: 66vh">
+        <div *ngIf="pageTotal > 0" style="min-height: 66vh">
           <div class="item_contract" *ngFor="let item of contractViewList | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}; let index1 = index">
             <div *ngIf="filter_status == 1">
                 <div class="row">
@@ -965,11 +965,12 @@
       </div>
     </div>
 
-    <div *ngIf="pageTotal == 0 && !(this.typeDisplay == 'signMany' || this.typeDisplay == 'viewMany')" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 90px">
-        <div style="display: table-cell;vertical-align: middle;">
-            <img src="../../../assets/img/empty_data.svg" />
-            <div style="color: #94A7C6">{{'no.data' | translate}}</div>
-        </div>
+    <div *ngIf="pageTotal == 0 && !(this.typeDisplay == 'signMany' || this.typeDisplay == 'viewMany')" 
+      [ngStyle]="{'min-height': filter_status != -1 ? '66vh' : '71vh', 'display': 'table', 'top': '0', 'left': '0', 'width': '100%', 'text-align': 'center'}">
+      <div style="display: table-cell; vertical-align: middle;">
+          <img src="../../../assets/img/empty_data.svg" />
+          <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+      </div>
     </div>
 
     <div *ngIf="this.typeDisplay === 'signOne'|| this.typeDisplay === 'downloadMany'" class="contract_footer">
