--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -162,16 +162,16 @@
           </div>
         </div>
 
-        <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
+        <!-- <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle>
-              <span class="document"></span>
+              <span class="document"></span> -->
               <!-- <div class="label">{{'document' | translate }}</div> -->
-          </div>
+          <!-- </div> -->
 
           <!-- <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
 
           </div> -->
-        </div>
+        <!-- </div> -->
 
 
       </div>
