--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -22,7 +22,7 @@
 
                         <div *ngIf="d.sign_unit == 'chu_ky_anh'" class="content-drag" id="element-drag" [ngStyle]="setWidth(d)">
                             <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : ''" [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
-                            <span *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.image.ekyc1' |translate}}</span>
+                            <span *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.image.ekyc' |translate}}</span>
                         </div>
                     </div>
                 </div>
