--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -135,10 +135,17 @@
   text-align: center;
   font-weight: 700;
 }
+
+.name_required{
+  color: #EE7200; 
+  padding: 5px; 
+  width: 80%;
+}
+
 .number_header_card{
   font-size: 30px;
   // padding-top: 10px;
-  color: #001A4D;
+  color: #002060;
   padding-bottom: 10px;
 }
 .img_header_card{
