Fix bug không xem được luồng xử lý & ẩn sub title Tạo ngay ở dashboard

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -266,7 +266,7 @@
                             <mat-icon><img src="../../assets/img/cancel_notes.svg" class="img_icon"/></mat-icon>
                             <span class="three_dot_text">{{'reasson.cancel.contract' | translate}}</span>
                           </button>
-                          <button mat-menu-item class="div_icon" (click)="processHandleContract(item.id)">
+                          <button mat-menu-item class="div_icon" (click)="processHandleContract(item.contractId)">
                             <mat-icon><img src="../../assets/img/programming-arrow.svg" class="img_icon"/></mat-icon>
                             <span class="three_dot_text">{{'view.processing.flow' | translate}}</span>
                           </button>
