--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -12,7 +12,26 @@
           <span>{{'text.dashboard.theme' | translate}}</span>
         </div>
         <br>
-        <div class="ceate_contract">
+        <div class="ceate_contract" (click)="clickAddContract()">
+          <button class="btn_add_contract">{{'menu.contract.add' | translate}}
+            <img src="../../assets/img/add-square_db.svg"/>
+          </button>
+          <!-- <mat-menu #menu="matMenu" style="margin-left: 50px;" class="popup_create_contract" xPosition = "after">
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.no.template' | translate}}</span>
+            </button>
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document-copy.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.batch' | translate}}</span>
+            </button>
+            <button mat-menu-item class="div_icon" (click)="clickAddContract()">
+              <mat-icon><img src="../../assets/img/document-code-2.svg" class="img_icon"/></mat-icon>
+              <span class="ceate_contract_text">{{'create.contract.template' | translate}}</span>
+            </button>
+          </mat-menu> -->
+        </div>
+        <!-- <div class="ceate_contract" (click)="clickAddContract()">
           <button class="btn_add_contract" mat-icon-button [matMenuTriggerFor]="menu">{{'menu.contract.add' | translate}}
             <img src="../../assets/img/add-square_db.svg"/>
           </button>
@@ -30,7 +49,7 @@
               <span class="ceate_contract_text">{{'create.contract.template' | translate}}</span>
             </button>
           </mat-menu>
-        </div>
+        </div> -->
       </div>
     </div>
     
