--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -22,9 +22,11 @@
   font-size: 14px;
   color: #001A4D;
   cursor: pointer;
-  white-space: nowrap; 
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .item_contract_created{
@@ -185,7 +187,7 @@
   background-color: #F1F5FE;
   padding: 10px 16px 10px 16px;
   opacity: 0px;
-  border-radius: 8px; 
+  border-radius: 8px;
   font-weight: 400;
 }
 
@@ -337,7 +339,7 @@
   margin-left: 5px;
   margin-right: 5px;
   height: 25px;
-  width: 50px; 
+  width: 50px;
   border-radius: 5px;
   border: 1px solid #0160AE;
 }
@@ -436,12 +438,12 @@
       flex: 0 0 auto;
       width: 90%;
   }
-  
+
   .col-xxl-8 {
     flex: 0 0 auto;
     width: 70%;
 }
-  
+
   .col-xxl-2 {
     flex: 0 0 auto;
     width: 10%;
