--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -23,10 +23,13 @@
   font-size: 14px;
   color: #001A4D;
   cursor: pointer;
-  white-space: nowrap; 
   overflow: hidden;
   text-overflow: ellipsis;
   width: 400px;
+  white-space: pre-wrap;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 
@@ -151,7 +154,7 @@
 }
 .search{
   height: 38px;
-  
+
 }
 .input-line {
   display: flex;
@@ -401,7 +404,7 @@
   margin-left: 5px;
   margin-right: 5px;
   height: 25px;
-  width: 50px; 
+  width: 50px;
   border-radius: 5px;
   border: 1px solid #0160AE;
 }
@@ -418,17 +421,17 @@
       flex: 0 0 auto;
       width: 80%;
   }
-  
+
   .col-xxl-8 {
     flex: 0 0 auto;
     width: 70%;
 }
-  
+
   .col-xxl-1-5 {
     flex: 0 0 auto;
     width: 10%;
   }
-  
+
   .col-xxl-1{
     flex: 0 0 auto;
     width: 1.333333333%;
